--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
+*{
+  margin: auto;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  /* margin-top: 20px; */
+  margin-bottom: 30px;
+}
+.user-input{
+  padding: 7px;
+  font-size: 23px;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.img{
+  width: 25%;
+  border: 2px solid black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.obt{
+  margin-left: 20px;
+}
+
+#h2{
+  margin-bottom: 30px;
+}
+
+#para{
+  font-size: 20px;
+}
+
+button{
+  background: #000000a9;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+button:hover{
+  background: black;
+  border: 2 px solid white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:active{
+  background:green;
 }
